# 371os

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  page
.cargo/: config.toml
c/01/: CMakeLists.txt
c/01/src/: main.c  main.h
c/21/: CMakeLists.txt
c/21/src/: main.c
c/22/: CMakeLists.txt
c/22/src/: main.c
c/52/: CMakeLists.txt
c/52/src/: entry.S  main.c  main.h
c/62/: CMakeLists.txt
c/62/src/: entry.S  library.c  library.h  linker.ld  literals.h  main.c  main.h  serial.c  serial.h  system.h  terminal.c  terminal.h
c/62/tests/: CMakeLists.txt  main.c  tests.c  tests.h
c/72/: CMakeLists.txt
c/72/src/: library.h  literals.h  main.c  serial.h  system.c  system.h  terminal.c
c/72/tests/: CMakeLists.txt  main.c  tests.c  tests.h
c/A2/: CMakeLists.txt
c/A2/src/: library.c  library.h  literals.c  literals.h  main.c  main.h  serial.c  serial.h  system.c  system.h  terminal.c  terminal.h  timer.c  timer.h
c/A2/tests/: CMakeLists.txt  main.c  main.h  tests.c  tests.h
cmake/: AddComponent.cmake  AddMultiTargetComponent.cmake  AddTarget.cmake
cmake/toolchains/: riscv64-toolchain.cmake
py/: get_symbols.py
rs/: Cargo.toml  rustfmt.toml
rs/11/: Cargo.toml
rs/11/src/: main.rs
rs/12/: Cargo.toml
rs/12/src/: lib.rs  main.rs
rs/20/: Cargo.toml
rs/20/src/: main.rs
rs/21/src/: main.rs
rs/22/: Cargo.toml
rs/22/src/: lib.rs  main.rs
rs/42/: Cargo.toml  memory.x
rs/42/.cargo/: config.toml
rs/42/src/: main.rs
rs/52/: Cargo.toml  colors.ppm  colors.py  colors.txt  image.py  main  x86_64-osirs.json
rs/52/src/: image.rs  img.rs  main.rs  vga.rs
src/: hello_world.c  hello_world.h  malloc.c  malloc.h  wc.c  wc.h
test/: medium.txt  small.txt
